[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mylo-agent"
version = "0.1.1"

[project.urls]
Homepage = "https://monteluke.github.io/mylo-project/index.html"
Repository = "https://github.com/MonteLuke/mylo-project"
Documentation = "https://monteluke.github.io/mylo-project/docs.html"

description = "An agent for analyzing GitHub and GitLab repositories."
readme = "README.md"
authors = [
    { name = "Monteluke", email = "monteluke121@gmail.com" }
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"

dependencies = [
    "langchain-anthropic>=1.4.6",
    "langchain-core>=1.4.8",
    "langchain-google-genai>=4.2.5",
    "langchain-groq>=1.1.3",
    "langchain-openai>=1.3.2",
    "pygments>=2.20.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "rich>=15.0.0",
    "textual>=0.50.0", 
    "tree-sitter>=0.25.2",
    "tree-sitter-language-pack>=1.10.1",
]

[project.scripts]
mylo = "mylo.agent:main"

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["mylo"]